Fixed bug #30407 (Strange behaviour of default arguments)